fix: no tabs page to be visible in light theme

--- a/src/base/styles/index.css
+++ b/src/base/styles/index.css
@@ -63,6 +63,7 @@ drag {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	text-align: center;
+	color: white;
 
 	img {
 		width: 54px;
